[tool.poetry]
name = "memory-leak-learning"
version = "0.1.0"
description = ""
authors = ["soohian <shonendumm@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
